corrected overflow bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,10 @@ $bodyColor: #e3efed;
 $white: #ffffff;
 $green: #5e905d;
 
+.App {
+  overflow-x: hidden;
+}
+
 #dn {
   display: none;
 }
